# bioLLM

./: .gitignore  README.md  main.py  pyproject.toml  restart_vllm.sh  start_vllm_docker-8B.sh  start_vllm_docker-gpt-oss.sh
data/: hackathon-test.jsonl
src/: classify.py  data_preprocess.py
src/.ipynb_checkpoints/: data_preprocess-checkpoint.py
src/model/: biorxiv_tool.py  cbioportal_tool.py  model.py  pbmed_tool.py  protein_expression_tool.py
src/model/.ipynb_checkpoints/: code_agent-checkpoint.py  compound_tool-checkpoint.py
src/model/cbioportal/: __init__.py  client.py  clinical.py  copy_number.py  expression.py  mutations.py  utils.py
